--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -155,3 +155,4 @@
 - tests/peripherals/CLIC/CLIC-riscv-arch-tests.robot
 - tests/peripherals/CLIC/CLIC-indirect-csr.robot
 - tests/peripherals/CLIC/CLIC-preemption-01.robot
+- tests/peripherals/CLIC/CLIC-priorities-01.robot
