[#60058] tests: Add CLIC-level-prio-01 test

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -156,3 +156,4 @@
 - tests/peripherals/CLIC/CLIC-indirect-csr.robot
 - tests/peripherals/CLIC/CLIC-preemption-01.robot
 - tests/peripherals/CLIC/CLIC-priorities-01.robot
+- tests/peripherals/CLIC/CLIC-level-prio-01.robot
