--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -157,3 +157,4 @@
 - tests/peripherals/CLIC/CLIC-indirect-csr.robot
 - tests/peripherals/CLIC/CLIC-preemption-01.robot
 - tests/peripherals/CLIC/CLIC-priorities-01.robot
+- tests/peripherals/CLIC/CLIC-level-prio-01.robot
