[#60857] ARM_GIC: Make all redistributor registers refer to attachedCPU

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -158,3 +158,4 @@
 - tests/peripherals/CLIC/CLIC-priorities-01.robot
 - tests/peripherals/CLIC/CLIC-level-prio-01.robot
 - tests/platforms/NPCX9.robot
+- tests/unit-tests/arm-gic-redistributor.robot
