[#61768] tests: Add Xen demos

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -114,6 +114,7 @@
 - tests/platforms/ARMv8R.robot
 - tests/platforms/ARMv8R-PMSA.robot
 - tests/platforms/ARMv8R-HiRTOS.robot
+- tests/platforms/ARMv8R-Xen.robot
 - tests/platforms/ARMv8M.robot
 - tests/peripherals/NRF52840_GPIO.robot
 - tests/platforms/nucleo_wba52cg.robot
