[#59997] Specify binary name in assembly metadata

--- a/src/Renode/Renode_NET.csproj
+++ b/src/Renode/Renode_NET.csproj
@@ -88,4 +88,12 @@
       <IncludeSourceRevisionInInformationalVersion>false</IncludeSourceRevisionInInformationalVersion>
     </PropertyGroup>
   </Target>
+  <Target Name="AddAssemblyMetadata" BeforeTargets="PrepareForBuild">
+    <ItemGroup>
+      <AssemblyAttribute Include="System.Reflection.AssemblyMetadataAttribute">
+        <_Parameter1>BinaryName</_Parameter1>
+        <_Parameter2>renode</_Parameter2>
+      </AssemblyAttribute>
+    </ItemGroup> 
+  </Target>
 </Project>
