--- a/src/Renode/Properties/AssemblyInfo.template
+++ b/src/Renode/Properties/AssemblyInfo.template
@@ -14,6 +14,7 @@ using System.Runtime.CompilerServices;
 [assembly: AssemblyProduct("Renode")]
 [assembly: AssemblyCopyright("(c) Antmicro")]
 [assembly: AssemblyCulture("")]
+[assembly: AssemblyMetadata("BinaryName", "renode")]
 
 // The assembly version has the format "{Major}.{Minor}.{Build}.{Revision}".
 // The form "{Major}.{Minor}.*" will automatically update the build and revision,
