[DEV] tests: Add python-engine.robot to the list of tests
After "[#58135] monitor: Allow string arguments in commands that use paths" commit, the previously unhandled variable type is now supported so the tested case was tweaked slightly to accommodate that change.

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -160,3 +160,4 @@
 - tests/peripherals/CLIC/CLIC-level-prio-01.robot
 - tests/platforms/NPCX9.robot
 - tests/unit-tests/arm-gic-redistributor.robot
+- tests/unit-tests/python-engine.robot
