[#62876] Add network based logger backend

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -161,3 +161,4 @@
 - tests/platforms/NPCX9.robot
 - tests/unit-tests/arm-gic-redistributor.robot
 - tests/unit-tests/python-engine.robot
+- tests/network-logging/network-logging.robot
