[#63079] Switch to AssemblyInfo.template for assembly info generation
The .NET build now also uses AssemblyInfo.template to generate assembly
info instead of autogenerating it with MSBuild, which fixes missing
attributes and some attributes having wrong values.

--- a/src/Renode/Properties/AssemblyInfo.template
+++ b/src/Renode/Properties/AssemblyInfo.template
@@ -1,5 +1,6 @@
 ﻿using System.Reflection;
 using System.Runtime.CompilerServices;
+using System.Runtime.Versioning;
 
 // Information about this assembly is defined by the following attributes.
 // Change them to the values specific to your project.
@@ -15,6 +16,11 @@ using System.Runtime.CompilerServices;
 [assembly: AssemblyCopyright("(c) Antmicro")]
 [assembly: AssemblyCulture("")]
 [assembly: AssemblyMetadata("BinaryName", "renode")]
+
+#if (PLATFORM_WINDOWS && NET5_0_OR_GREATER)
+[assembly: TargetPlatform("windows10.0.17763.0")]
+[assembly: SupportedOSPlatform("windows10.0.17763.0")]
+#endif
 
 // The assembly version has the format "{Major}.{Minor}.{Build}.{Revision}".
 // The form "{Major}.{Minor}.*" will automatically update the build and revision,
