--- a/src/Renode/Renode_NET.csproj
+++ b/src/Renode/Renode_NET.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <TargetFrameworks Condition="$(OS) != 'Windows_NT'">net6.0</TargetFrameworks>
     <TargetFrameworks Condition="$(OS) == 'Windows_NT'">net6.0-windows10.0.17763.0</TargetFrameworks>
+    <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
     <Deterministic>false</Deterministic>
     <OutputPath>..\..\output\bin\$(Configuration)</OutputPath>
     <OutputType>Exe</OutputType>
@@ -69,9 +70,6 @@
     <ProjectReference Include="..\Infrastructure\src\Emulator\Cores\cores-arm64_NET.csproj"/>
   </ItemGroup>
   <ItemGroup>
-    <Compile Remove="Properties\AssemblyInfo.cs"/>
-  </ItemGroup>
-  <ItemGroup>
     <EmbeddedResource Include="..\..\lib\resources\images\windows_setup\renode_nobg.ico">
       <Link>Resources\renode_nobg.ico</Link>
       <LogicalName>renode_nobg.ico</LogicalName>
@@ -84,22 +82,20 @@
       <LogicalName>RobotoMono-Regular.ttf</LogicalName>
     </EmbeddedResource>
   </ItemGroup>
-  <Target Name="SetSourceRevisionId" BeforeTargets="PrepareForBuild">
-    <Exec Command="git rev-parse --short=8 HEAD" StandardOutputImportance="Low" ConsoleToMSBuild="True" IgnoreExitCode="False">
-      <Output PropertyName="SourceRevisionId" TaskParameter="ConsoleOutput"/>
-    </Exec>
-    <PropertyGroup>
-      <AssemblyVersion>$([System.IO.File]::ReadAllText(../../tools/version).Trim()).*</AssemblyVersion>
-      <InformationalVersion>$(SourceRevisionId)-$([System.DateTime]::Now.ToString(yyyyMMddhhmm))</InformationalVersion>
-      <IncludeSourceRevisionInInformationalVersion>false</IncludeSourceRevisionInInformationalVersion>
-    </PropertyGroup>
-  </Target>
-  <Target Name="AddAssemblyMetadata" BeforeTargets="PrepareForBuild">
+  <Target Name="CreateAssemblyInfo" BeforeTargets="PrepareForBuild">
     <ItemGroup>
-      <AssemblyAttribute Include="System.Reflection.AssemblyMetadataAttribute">
-        <_Parameter1>BinaryName</_Parameter1>
-        <_Parameter2>renode</_Parameter2>
-      </AssemblyAttribute>
-    </ItemGroup> 
+      <CheckIfAssemblyInfoExists Include="Properties/AssemblyInfo.cs">
+        <AssemblyInfoExists Condition="Exists('Properties/AssemblyInfo.cs')">true</AssemblyInfoExists>
+        <AssemblyInfoExists Condition="!Exists('Properties/AssemblyInfo.cs')">false</AssemblyInfoExists>
+      </CheckIfAssemblyInfoExists>
+    </ItemGroup>
+
+    <Exec Command="cd Properties; ../../../tools/building/createAssemblyInfo.sh" Condition="$(CurrentPlatform) != 'Windows'" />
+    <!--The Powershell pipe is used for running the script without altering execution policy on host machine.-->
+    <Exec Command="cd Properties &amp; powershell &quot;Get-Content ../../../tools/building/createAssemblyInfo.ps1 | powershell -command -&quot;" Condition="$(CurrentPlatform) == 'Windows'" />
+
+    <ItemGroup>
+      <Compile Include="Properties/AssemblyInfo.cs" Condition="!%(CheckIfAssemblyInfoExists.AssemblyInfoExists)" />
+    </ItemGroup>
   </Target>
 </Project>
