--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -162,3 +162,4 @@
 - tests/unit-tests/arm-gic-redistributor.robot
 - tests/unit-tests/python-engine.robot
 - tests/network-logging/network-logging.robot
+- tests/unit-tests/riscv-mret.robot
