[#64703] acrn_x86_64: Add test running Zephyr hello_world sample

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -164,3 +164,4 @@
 - tests/network-logging/network-logging.robot
 - tests/unit-tests/riscv-mret.robot
 - tests/platforms/X86.robot
+- tests/platforms/ACRN.robot
