--- a/src/Plugins/SystemCPlugin/SystemCPlugin.csproj
+++ b/src/Plugins/SystemCPlugin/SystemCPlugin.csproj
@@ -51,6 +51,10 @@
       <Project>{66400796-0C5B-4386-A859-50A2AC3F3DB7}</Project>
       <Name>Peripherals</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\lib\Migrant\Migrant\Migrant.csproj">
+      <Project>{5F87C357-09FB-4F53-BE37-41FE5BD88957}</Project>
+      <Name>Migrant</Name>
+    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Peripheral\" />
