[#64620] riscv: Fix RORIW, RORI, SLLI.UW instructions

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -166,3 +166,4 @@
 - tests/platforms/X86.robot
 - tests/platforms/ACRN.robot
 - tests/unit-tests/zephyr-mode.robot
+- tests/unit-tests/riscv-zbb-extension.robot
