[#64901] tlib: Enable selective caching of memory ranges

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -167,3 +167,4 @@
 - tests/platforms/ACRN.robot
 - tests/unit-tests/zephyr-mode.robot
 - tests/unit-tests/riscv-zbb-extension.robot
+- tests/unit-tests/register-read-caching.robot
