[#65857] Add renode-models-analyzer as a submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -41,3 +41,6 @@
 [submodule "tools/dts2repl"]
 	path = tools/dts2repl
 	url = https://github.com/antmicro/dts2repl.git
+[submodule "tools/models_analyzer"]
+	path = tools/models_analyzer
+	url = https://github.com/antmicro/renode-models-analyzer.git
