[#66768] IBusController: Select index of the symbol address to fetch

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -168,3 +168,4 @@
 - tests/unit-tests/zephyr-mode.robot
 - tests/unit-tests/riscv-zbb-extension.robot
 - tests/unit-tests/register-read-caching.robot
+- tests/unit-tests/symbols.robot
