--- a/src/Plugins/CoSimulationPlugin/CoSimulationPlugin.csproj
+++ b/src/Plugins/CoSimulationPlugin/CoSimulationPlugin.csproj
@@ -45,7 +45,7 @@
     <Compile Include="Verilated\Peripherals\BaseCoSimulatedPeripheral.cs" />
     <Compile Include="Verilated\Peripherals\VerilatedPeripheral.cs" />
     <Compile Include="Verilated\Peripherals\VerilatedUART.cs" />
-    <Compile Include="Verilated\Peripherals\VerilatedCPU.cs" />
+    <Compile Include="Verilated\Peripherals\CoSimulatedCPU.cs" />
     <Compile Include="Verilated\Peripherals\VerilatedRiscV32.cs" />
     <Compile Include="Verilated\Peripherals\VerilatedRiscV32Registers.cs" />
     <Compile Include="Connection\IVerilatedPeripheral.cs" />
