--- a/src/Plugins/CoSimulationPlugin/CoSimulationPlugin_NET.csproj
+++ b/src/Plugins/CoSimulationPlugin/CoSimulationPlugin_NET.csproj
@@ -14,7 +14,7 @@
     <PackageReference Include="Mono.Posix" Version="7.1.0-final.1.21458.1" Condition=" $(OS) != 'Windows_NT'"/>
   </ItemGroup>
   <ItemGroup>
-    <Compile Remove="VerilatorIntegrationLibrary\**\*"/>
+    <Compile Remove="CoSimulationLibrary\**\*"/>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\lib\AntShell\AntShell\AntShell_NET.csproj"/>
