--- a/tests/aarch64-host-tests.yaml
+++ b/tests/aarch64-host-tests.yaml
@@ -5,6 +5,65 @@
 - lib/options-parser/OptionsParserTests.csproj
 
 - tests/example.robot
+- tests/metrics-analyzer/metrics-analyzer.robot
+- tests/peripherals/CLIC/CLIC-indirect-csr.robot
+- tests/peripherals/CLIC/CLIC-level-prio-01.robot
+- tests/peripherals/CLIC/CLIC-preemption-01.robot
+- tests/peripherals/CLIC/CLIC-priorities-01.robot
+- tests/peripherals/CLIC/CLIC-riscv-arch-tests.robot
+- tests/peripherals/LSM330.robot
+- tests/peripherals/MB85RC1MT.robot
+- tests/peripherals/NRF52840_GPIO.robot
+- tests/platforms/ACRN.robot
+- tests/platforms/CC2538/cc2538_cryptoprocessor.robot
+- tests/platforms/CC2538/cc2538_flash_controller.robot
+- tests/platforms/CC2538/cc2538_single-node.robot
+- tests/platforms/Fomu.robot
+- tests/platforms/LiteX/LiteX_Microwatt.robot
+- tests/platforms/MPC5567.robot
+- tests/platforms/Murax.robot
+- tests/platforms/PicoSoC.robot
+- tests/platforms/PolarFireSoC.robot
+- tests/platforms/SiFive-FU540.robot
+- tests/platforms/SiFive-FU740.robot
+- tests/tools/execution_tracer_reader.robot
+- tests/unit-tests/ARMv8R_TCM.robot
+- tests/unit-tests/AdHocCompiler/adhoc-compiler.robot
 - tests/unit-tests/aarch64-host.robot
-- tests/unit-tests/riscv-mret.robot
+- tests/unit-tests/arm-atomic.robot
+- tests/unit-tests/arm-gic-redistributor.robot
+- tests/unit-tests/arm-performance-monitoring-unit.robot
+- tests/unit-tests/arm-signals-unit.robot
+- tests/unit-tests/arm-thumb.robot
+- tests/unit-tests/arm-wfi-hook.robot
+- tests/unit-tests/cpu-step.robot
+- tests/unit-tests/emulation-environment.robot
+- tests/unit-tests/external-mmu.robot
+- tests/unit-tests/file-paths.robot
+- tests/unit-tests/grammar-number-separator.robot
+- tests/unit-tests/iommu.robot
+- tests/unit-tests/it-status.robot
 - tests/unit-tests/llvm-asm-disasm.robot
+- tests/unit-tests/log-tests.robot
+- tests/unit-tests/memory-invalidation.robot
+- tests/unit-tests/monitor-tests.robot
+- tests/unit-tests/opcodes-counting.robot
+- tests/unit-tests/page-access-via-io.robot
+- tests/unit-tests/per-core-registration.robot
+- tests/unit-tests/peripheral-hooks.robot
+- tests/unit-tests/platform-file-aliases.robot
+- tests/unit-tests/platform_descriptions.robot
+- tests/unit-tests/pmp.robot
+- tests/unit-tests/python-engine.robot
+- tests/unit-tests/real-time-clock-mode.robot
+- tests/unit-tests/register-read-caching.robot
+- tests/unit-tests/riscv-custom-instructions.robot
+- tests/unit-tests/riscv-ebreak.robot
+- tests/unit-tests/riscv-mret.robot
+- tests/unit-tests/riscv-unit-tests.robot
+- tests/unit-tests/riscv-zbb-extension.robot
+- tests/unit-tests/symbols.robot
+- tests/unit-tests/sysbus.robot
+- tests/unit-tests/tb_overwrite.robot
+- tests/unit-tests/virtual-time.robot
+- tests/unit-tests/zephyr-mode.robot
