[#64968] tests: added missing BeagleV-Fire test to tests list

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -151,6 +151,7 @@
 - tests/peripherals/UT32_CAN.robot
 - tests/peripherals/S32K3XX_FlexCAN.robot
 - tests/platforms/BeagleV-StarLight.robot
+- tests/platforms/BeagleV-Fire.robot
 - tests/unit-tests/virtual-time.robot
 - tests/unit-tests/platform-file-aliases.robot
 - tests/peripherals/VirtIO.robot
