--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -11,6 +11,7 @@
 - tests/unit-tests/llvm-asm-disasm.robot
 - tests/unit-tests/emulation-environment.robot
 - tests/unit-tests/platform_descriptions.robot
+- tests/unit-tests/riscv-isa-string.robot
 - tests/unit-tests/sysbus.robot
 - tests/platforms/SiFive-FE310/SiFive-FE310.robot
 - tests/platforms/SiFive-FU540.robot
