--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -186,3 +186,4 @@
 - tests/unit-tests/instructions-counting.robot
 - tests/unit-tests/timer-reconfiguration.robot
 - tests/platforms/S32K388.robot
+- tests/unit-tests/bus-isolation.robot
