--- a/src/Renode/Renode_NET.csproj
+++ b/src/Renode/Renode_NET.csproj
@@ -64,6 +64,7 @@
     <ProjectReference Include="..\Infrastructure\src\Plugins\TracePlugin\TracePlugin_NET.csproj"/>
     <ProjectReference Include="..\Plugins\WiresharkPlugin\WiresharkPlugin_NET.csproj"/>
     <ProjectReference Include="..\Plugins\CoSimulationPlugin\CoSimulationPlugin_NET.csproj"/>
+    <ProjectReference Include="..\Plugins\SystemCPlugin\SystemCPlugin_NET.csproj"/>
     <ProjectReference Include="..\Infrastructure\src\Emulator\Cores\cores-riscv64_NET.csproj"/>
     <ProjectReference Include="..\..\lib\InpliTftpServer\libtftp\libtftp_alt_NET.csproj"/>
     <ProjectReference Include="..\..\lib\Packet.Net\PacketDotNet\PacketDotNet_NET.csproj"/>
