[#58985] tests: Add instructions counting unit tests

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -183,3 +183,4 @@
 - tests/platforms/systemc/multiple-peripherals/multiple-peripherals.robot
 - tests/platforms/systemc/transaction-delay/transaction-delay.robot
 - tests/platforms/systemc/test-synchronization/synchronization.robot
+- tests/unit-tests/instructions-counting.robot
