[#58985] tests: Add instructions counting unit tests

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -175,3 +175,4 @@
 - tests/unit-tests/symbols.robot
 - tests/unit-tests/aarch64-host.robot
 - tests/platforms/MSP430X.robot
+- tests/unit-tests/instructions-counting.robot
