[DEV] tests.yaml: Add MSP430X.robot

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -174,3 +174,4 @@
 - tests/unit-tests/register-read-caching.robot
 - tests/unit-tests/symbols.robot
 - tests/unit-tests/aarch64-host.robot
+- tests/platforms/MSP430X.robot
