--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -184,3 +184,4 @@
 - tests/platforms/systemc/transaction-delay/transaction-delay.robot
 - tests/platforms/systemc/test-synchronization/synchronization.robot
 - tests/unit-tests/instructions-counting.robot
+- tests/unit-tests/timer-reconfiguration.robot
