[DEV] ci: Add array_memory to the list of tests

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -170,6 +170,7 @@
 - tests/platforms/X86.robot
 - tests/platforms/ACRN.robot
 - tests/unit-tests/zephyr-mode.robot
+- tests/unit-tests/array_memory.robot
 - tests/unit-tests/riscv-zbb-extension.robot
 - tests/unit-tests/register-read-caching.robot
 - tests/unit-tests/symbols.robot
