[#69467] Add sync_pc.robot to tests.yaml

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -177,3 +177,4 @@
 - tests/unit-tests/aarch64-host.robot
 - tests/platforms/MSP430X.robot
 - tests/unit-tests/riscv-zve-extension.robot
+- tests/unit-tests/sync_pc.robot
