--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -162,6 +162,7 @@
 - tests/peripherals/CLIC/CLIC-preemption-01.robot
 - tests/peripherals/CLIC/CLIC-priorities-01.robot
 - tests/peripherals/CLIC/CLIC-level-prio-01.robot
+- tests/peripherals/CLIC/CLIC-mcause-mstatus-alias.robot
 - tests/platforms/NPCX9.robot
 - tests/unit-tests/arm-gic-redistributor.robot
 - tests/unit-tests/python-engine.robot
