[#71428] RenodeCopyrightAnalyzer: Initial implementation

--- a/.editorconfig
+++ b/.editorconfig
@@ -110,3 +110,6 @@ dotnet_naming_symbols.parameters_group.applicable_kinds = parameter
 dotnet_naming_rule.parameters_rule.symbols              = parameters_group
 dotnet_naming_rule.parameters_rule.style                = camel_case_style
 dotnet_naming_rule.parameters_rule.severity             = warning
+
+# Renode specific rules
+dotnet_diagnostic.renode_copyright.severity             = warning
