--- a/src/Plugins/SystemCPlugin/SystemCPlugin.csproj
+++ b/src/Plugins/SystemCPlugin/SystemCPlugin.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Peripheral\SystemCPeripheral.cs" />
+    <Compile Include="Peripheral\SystemCCPU.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Infrastructure\src\Emulator\Main\Emulator.csproj">
@@ -54,6 +55,10 @@
     <ProjectReference Include="..\..\..\lib\Migrant\Migrant\Migrant.csproj">
       <Project>{5F87C357-09FB-4F53-BE37-41FE5BD88957}</Project>
       <Name>Migrant</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\..\lib\ELFSharp\ELFSharp\ELFSharp.csproj">
+      <Project>{CF944E09-7C14-433C-A185-161848E989B3}</Project>
+      <Name>ELFSharp</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
