[#72867] Plugins: Make symbol hooks more extensible

--- a/src/Renode/Renode.csproj
+++ b/src/Renode/Renode.csproj
@@ -120,6 +120,8 @@
     <Compile Include="Network\RangeMediumFunction.cs" />
     <Compile Include="Backends\Terminals\UartPtyTerminal.cs" />
     <Compile Include="Plugins\ZephyrMode.cs" />
+    <Compile Include="Plugins\OsSymbolHook.cs" />
+    <Compile Include="Plugins\OsTimeSkipHook.cs" />
     <Compile Include="PlatformDescription\UserInterface\MonitorInitHandler.cs" />
     <Compile Include="PlatformDescription\UserInterface\PlatformDescriptionMachineExtensions.cs" />
     <Compile Include="Connectors\GPIOConnector.cs" />
