[#72867] Plugins: Add U-Boot mode

--- a/src/Renode/Renode.csproj
+++ b/src/Renode/Renode.csproj
@@ -120,6 +120,7 @@
     <Compile Include="Network\RangeMediumFunction.cs" />
     <Compile Include="Backends\Terminals\UartPtyTerminal.cs" />
     <Compile Include="Plugins\ZephyrMode.cs" />
+    <Compile Include="Plugins\UbootMode.cs" />
     <Compile Include="Plugins\OsSymbolHook.cs" />
     <Compile Include="Plugins\OsTimeSkipHook.cs" />
     <Compile Include="PlatformDescription\UserInterface\MonitorInitHandler.cs" />
@@ -224,6 +225,10 @@
     <ProjectReference Include="..\Infrastructure\src\Infrastructure.csproj">
       <Project>{D3F10ED0-2A3F-45D5-8524-0D562905778B}</Project>
       <Name>Infrastructure</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\lib\ELFSharp\ELFSharp\ELFSharp.csproj">
+      <Project>{CF944E09-7C14-433C-A185-161848E989B3}</Project>
+      <Name>ELFSharp</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
