Silicon Labs Series-2 support: xG24, xG26 and minimal xG22

--- a/src/Renode/Renode.csproj
+++ b/src/Renode/Renode.csproj
@@ -151,6 +151,7 @@
     <Compile Include="Network\ExternalControl\GetMachine.cs" />
     <Compile Include="Network\ExternalControl\ADC.cs" />
     <Compile Include="Network\ExternalControl\GPIOPort.cs" />
+    <Compile Include="EFR32xG24_Radio.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ProjectExtensions>
