--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -22,6 +22,7 @@
 - tests/unit-tests/demos.robot
 - tests/unit-tests/robot-integration.robot
 - tests/unit-tests/riscv-unit-tests.robot
+- tests/unit-tests/riscv-amocas.robot
 - tests/unit-tests/mpu.robot
 - tests/unit-tests/arm-atomic.robot
 - tests/platforms/SAME70.robot
