[#74520] profiler: Add trace file size limit test

--- a/tests/tests.yaml
+++ b/tests/tests.yaml
@@ -188,3 +188,4 @@
 - tests/platforms/S32K388.robot
 - tests/unit-tests/bus-isolation.robot
 - tests/unit-tests/bus-performance.robot
+- tests/unit-tests/profiler-trace.robot
